--- a/_config.yml
+++ b/_config.yml
@@ -1,36 +1,17 @@
 baseurl: '/'
 permalink: pretty
-title: 'Jekyll Serif'
+title: 'Schmuck Today'
 
 logo:
-  mobile: "images/logo/logo-mobile.svg"
-  mobile_height: "32px"
-  mobile_width: "32px"
-  desktop: "images/logo/logo.svg"
-  desktop_height: "32px"
+  mobile: "images/logo/logo.jpg"
+  mobile_height: "90px"
+  mobile_width: "90px"
+  desktop: "images/logo/logo.jpg"
+  desktop_height: "120px"
   desktop_width: "120px"
 
 home: 
   limit_services: 6
-
-collections:
-  services:
-    output: true
-    sort_by: weight
-  team:
-    output: true
-
-defaults:
-  - scope:
-      path: ""
-      type: "services"
-    values:
-      layout: "service"
-  - scope:
-      path: ""
-      type: "team"
-    values:
-      layout: "team"
 
 sass:
   style: compressed # possible values: nested expanded compact compressed
