--- a/_data/menus.yml
+++ b/_data/menus.yml
@@ -1,21 +1,13 @@
 main:
-  - name: "Services"
-    url: "/services/"
-    weight: 2
-  - name: "Team"
-    url: "/team/"
-    weight: 3
-  - name: "About"
-    url: "/about/"
-    weight: 4
-  - name: "Contact"
-    url: "/contact/"
-    weight: 5
+  - name: "Shop"
+    url: "https://www.ebay.de/usr/schmucktoday"
+    icon: "images/social/ebay.svg"
+    weight: 1
 
 footer:
   - name: "Home"
     url: "/"
     weight: 1
-  - name: "Contact"
-    url: "/contact/"
+  - name: "Impressum"
+    url: "/impressum/"
     weight: 2
