--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -1,3 +1,3 @@
-email: 'jekyllserif@example.com'
-phone: '1800 123 000'
-contact_button_link: 'contact'
+email: 'service@schmuck-today.de'
+phone: '0821 34995723'
+contact_button_link: 'impressum'
